# DoanThiThuQuyen_GR1_20242

./: CMakeLists.txt  README.md  sdkconfig
RFC_Try/: CMakeLists.txt  sdkconfig
RFC_Try/main/: main.c
components/ssd1306/: CMakeLists.txt
main/: CMakeLists.txt  FlashHandler.c  FlashHandler.h  Global.h  MQTTHandler.c  MQTTHandler.h  RIFD_Handler.c  RIFD_Handler.h  UARTHandler.c  UARTHandler.h  main.c  rc522.h  rc522_Handler.c  rc522_Handler.h  rc522_driver.h  rc522_driver_internal.h  rc522_helpers_internal.h  rc522_i2c.h  rc522_internal.h  rc522_pcd.h  rc522_pcd_internal.h  rc522_picc.h  rc522_picc_internal.h  rc522_spi.h  rc522_types.h  rc522_types_internal.h  task_common.h  uart.c  uartTask.c  wifiHandler.c  wifiHandler.h
